app/src/components/FullscreenStream.css
#fullscreen-stream {
	z-index: 1;

	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	height: 100vh;
	width: 100vw;
}

#offline-image {
	width: 200px;
	height: 200px;

	position: absolute;
	top: 50%;
	left: 50%;

	transform: translate(-50%, -50%);

	pointer-events: none;

	opacity: 0.4;

	user-select: none;
}

.stream-player-wrapper {

	background: black;

	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 100%;
	height: 100%;
	z-index: 1;
	padding-top: 56.25%; /* Player ratio: 100 / (16 / 9) */
	box-sizing: border-box;

	user-select: none;
}
  
.stream-player {
	position: absolute;
	top: 0;
	left: 0;
}

